--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>View my work</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/dist/css/main.css" />
   </head>
 
   <body>
@@ -25,13 +25,13 @@
             <a href="/index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="/about.html" class="nav-link">About Me</a>
+            <a href="/dist/about.html" class="nav-link">About Me</a>
           </li>
           <li class="nav-item current">
-            <a href="/work.html" class="nav-link">My Work</a>
+            <a href="/dist/work.html" class="nav-link">My Work</a>
           </li>
           <li class="nav-item">
-            <a href="/contact.html" class="nav-link">How To Reach Me</a>
+            <a href="/dist/contact.html" class="nav-link">How To Reach Me</a>
           </li>
         </ul>
       </nav>
