Added meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name = "description" content="Henry Bernardin's Portfolio website.">
+    <meta name="author" content="Henry Bernardin">
+    <meta name="keywords" content="Henry, Bernardin,Henry Bernardin">
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
   </head>
