--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <a href="https://www.linkedin.com/in/henry-bernardin/" target="_blank">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
+        <a href="mailto:Henry.Bernardin@gmail.com" target="_blank">
+          <i class="fas fa-envelope fa-2x"></i>
+        </a>
       </div>
     </main>
     <script src="https://kit.fontawesome.com/f4dae94291.js" crossorigin="anonymous"></script>
