Added phone call to home page

--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
         <a href="https://www.linkedin.com/in/henry-bernardin/" target="_blank">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
-        <a href="mailto:Henry.Bernardin@gmail.com" target="_blank">
+        <a href="mailto:Henry.Bernardin@gmail.com">
           <i class="fas fa-envelope fa-2x"></i>
+        </a>
+        <a href="tel:3472365657">
+          <i class="fas fa-phone-square-alt fa-2x"></i>
         </a>
       </div>
     </main>
