--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Henry, Bernardin,Henry Bernardin">
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <link rel="icon" href="/img/Site Icon/PortfolioLogo.png">
   </head>
 
   <body id="bg-img">
