Added social media tag image & og:url

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name = "description" content="Henry Bernardin's Portfolio website.">
     <meta name="author" content="Henry Bernardin">
     <meta name="keywords" content="Henry, Bernardin,Henry Bernardin">
+    <meta property="og:url" content="https://www.henrybernardin.com/"/>
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
     <link rel="icon" href="/img/Site Icon/PortfolioLogo.png">
