--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Henry Bernardin">
     <meta name="keywords" content="Henry, Bernardin,Henry Bernardin">
     <meta property="og:url" content="https://www.henrybernardin.com/"/>
+    <meta property="og:type" content="website" />
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
     <link rel="icon" href="/img/Site Icon/PortfolioLogo.png">
