og:description meta tag added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://github.com/Henry-Bernardin/mordern_portfolio/blob/master/img/SocialMediaTag.png" /> 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Henry Bernardin Portfolio" /> 
+    <meta property="og:description" content="TPortfolio Website For Henry Bernardin" />
 
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
