twitter:card meta tag added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Henry Bernardin Portfolio" /> 
     <meta property="og:description" content="TPortfolio Website For Henry Bernardin" />
+    <meta name="twitter:card" content="summary_large_image">
 
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
