--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:title" content="Henry Bernardin Portfolio" /> 
     <meta property="og:description" content="TPortfolio Website For Henry Bernardin" />
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@HenryBernardin">
 
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
