twitter:title meta tag added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@HenryBernardin">
     <meta name="twitter:creator" content="@HenryBernardin">
+    <meta name="twitter:title" content="Henry Bernardin Portfolio">
 
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
