--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <meta property="og:image" content="https://github.com/Henry-Bernardin/mordern_portfolio/blob/master/img/SocialMediaTag.png" /> 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Henry Bernardin Portfolio" /> 
-    <meta property="og:description" content="TPortfolio Website For Henry Bernardin" />
+    <meta property="og:description" content="Portfolio Website For Henry Bernardin" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@HenryBernardin">
     <meta name="twitter:creator" content="@HenryBernardin">
     <meta name="twitter:title" content="Henry Bernardin Portfolio">
+    <meta name="twitter:description" content="Portfolio Website For Henry Bernardin">
 
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
