twitter:image meta tag added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:creator" content="@HenryBernardin">
     <meta name="twitter:title" content="Henry Bernardin Portfolio">
     <meta name="twitter:description" content="Portfolio Website For Henry Bernardin">
+    <meta name="twitter:image" content="https://github.com/Henry-Bernardin/mordern_portfolio/blob/master/img/SocialMediaTag.png">
 
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
