--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Henry Bernardin">
     <meta name="keywords" content="Henry, Bernardin,Henry Bernardin">
     <meta property="og:url" content="https://www.henrybernardin.com/"/>
-    <meta property="og:image" content="https://hosting.photobucket.com/images/hh531/AllStar_H/SocialMediaTag(1).png?width=1920&height=1080&fit=bounds" /> 
+    <meta property="og:image" content="https://photos.app.goo.gl/uAHS6oTXJT4Tdu976" /> 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Henry Bernardin Portfolio" /> 
     <meta property="og:description" content="Portfolio Website For Henry Bernardin" />
@@ -17,7 +17,7 @@
     <meta name="twitter:creator" content="@HenryBernardin">
     <meta name="twitter:title" content="Henry Bernardin Portfolio">
     <meta name="twitter:description" content="Portfolio Website For Henry Bernardin">
-    <meta name="twitter:image" content="https://hosting.photobucket.com/images/hh531/AllStar_H/SocialMediaTag(1).png?width=1920&height=1080&fit=bounds">
+    <meta name="twitter:image" content="https://photos.app.goo.gl/uAHS6oTXJT4Tdu976">
 
     <title>Welcome To My Portfolio</title>
     <link rel="stylesheet" href="./dist/css/main.css" />
